# grocery_bot

./: .gitignore  CLAUDE.md  README.md  SCORE_PLAN.md  TASKS.md  analyze_replay.py  assignment.py  benchmark.py  benchmark_reporting.py  bot.py  constants.py  delivery.py  game_state.py  generate_ascii_maps.py  idle.py  movement.py  orders.py  package-lock.json  package.json  pathfinding.py  pickup.py  pyproject.toml  round_planner.py  serve_visualizer.py  simulator.py  sweep.py  test_bot.py  visualizer.html
.devcontainer/: Dockerfile  devcontainer.json
docs/: 2000_points_plan.md  CHALLENGE.md  NEXT_STEPS.md  OPTIMIZATION_PLAN.md  active_priority_plan.md  benchmark_results.md  daily_improvement_plan.md  multi_trip_plan.md  oracle_planner.md  plan_2000_points.md  refactoring_plan.md
grocery_bot/: __init__.py  constants.py  game_log.py  game_state.py  pathfinding.py  simulator.py  team_config.py
maps/: 2026-03-07_12x10_1bot.json  2026-03-07_12x10_1bot.txt  2026-03-07_16x12_3bot.json  2026-03-07_16x12_3bot.txt  2026-03-07_22x14_5bot.json  2026-03-07_22x14_5bot.txt  2026-03-07_28x18_10bot.json  2026-03-07_28x18_10bot.txt  2026-03-07_30x18_20bot.json  2026-03-07_30x18_20bot.txt  2026-03-08_12x10_1bot.json  2026-03-08_12x10_1bot.txt  2026-03-08_16x12_3bot.json  2026-03-08_16x12_3bot.txt  2026-03-08_22x14_5bot.json  2026-03-08_22x14_5bot.txt  2026-03-08_28x18_10bot.json  2026-03-08_28x18_10bot.txt  2026-03-08_30x18_20bot.json  2026-03-08_30x18_20bot.txt  2026-03-09_12x10_1bot.json  2026-03-09_12x10_1bot.txt  2026-03-09_16x12_3bot.json  2026-03-09_16x12_3bot.txt  2026-03-09_22x14_5bot.json  2026-03-09_22x14_5bot.txt  2026-03-09_28x18_10bot.json  2026-03-09_28x18_10bot.txt  2026-03-09_30x18_20bot.json  2026-03-09_30x18_20bot.txt  2026-03-10_12x10_1bot.json  2026-03-10_12x10_1bot.txt  2026-03-10_16x12_3bot.json  2026-03-10_16x12_3bot.txt  2026-03-10_22x14_5bot.json  (+26 more)
tests/: conftest.py  (+22 more)
(+147 files in other folders)
